--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
    <h1>This is my first Repository</h1>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est officiis atque soluta! A voluptas, ullam expedita cupiditate odit corporis facilis dolores ducimus nam veniam sint mollitia tenetur, similique asperiores! Consectetur modi molestiae quidem eligendi sapiente facilis amet voluptate inventore, voluptatibus ducimus dolorem corrupti, doloremque rem assumenda soluta mollitia illum! Amet, architecto incidunt cumque, doloribus neque similique veniam quas explicabo perspiciatis nihil adipisci porro consectetur provident. Amet aut, voluptatibus architecto eligendi tempore rerum, porro fugit quas, vero illo corrupti dolor nihil!</p>
+   <img src="images/p01.webp" alt="">
+   <img src="images/p04.webp" alt="">
 </body>
 </html>
